--- a/package.json
+++ b/package.json
@@ -51,10 +51,14 @@
     "@ant-design/pro-table": "^2.7.2",
     "@umijs/route-utils": "^1.0.32",
     "antd": "^4.6.3",
+    "axios": "^0.21.0",
     "classnames": "^2.2.6",
+    "file-saver": "^2.0.2",
     "lodash": "^4.17.11",
     "moment": "^2.25.3",
     "omit.js": "^2.0.2",
+    "print-js": "^1.5.0",
+    "qrcode.react": "^1.0.0",
     "qs": "^6.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
