--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
     "file-saver": "^2.0.2",
+    "flv.js": "^1.5.0",
     "lodash": "^4.17.11",
     "moment": "^2.25.3",
     "omit.js": "^2.0.2",
@@ -63,6 +64,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet-async": "^1.0.4",
+    "react-svg": "^11.1.0",
+    "svg.js": "^2.7.1",
     "umi": "^3.2.14",
     "umi-request": "^1.0.8",
     "use-merge-value": "^1.0.1"
