--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@ant-design/pro-descriptions": "^1.0.16",
     "@ant-design/pro-layout": "^6.4.16",
     "@ant-design/pro-table": "^2.7.2",
+    "@microsoft/signalr": "^5.0.1",
     "@umijs/route-utils": "^1.0.32",
     "antd": "^4.6.3",
     "axios": "^0.21.0",
